# RustBFT

./: .gitignore  AGENTS.md  Cargo.toml  README.md  code_review.md  codebase_review_guide.md  issues_resolver_detail.md
crates/consensus/: Cargo.toml
crates/consensus/src/: events.rs  lib.rs  proposer.rs  state.rs  timer.rs  vote_set.rs
crates/core/: Cargo.toml
crates/core/src/: address.rs  block.rs  codec.rs  crypto.rs  error.rs  lib.rs  proposal.rs  transaction.rs  validator.rs  vote.rs
crates/hotstuff/: Cargo.toml
crates/hotstuff/src/: events.rs  lib.rs  qc.rs  state.rs  types.rs
crates/node/: Cargo.toml
crates/node-cli/: Cargo.toml
crates/node-cli/src/: main.rs
crates/node-cli/tests/: consensus_core_tests.rs  integration_tests.rs  proposer_tests.rs  validator_set_tests.rs  vote_set_tests.rs  wal_tests.rs
crates/node/src/: bridge.rs  config.rs  lib.rs  mempool.rs
crates/node/src/contracts/: host_api.rs  mod.rs  runtime.rs
crates/node/src/execution/: accounts.rs  executor.rs  merkle.rs  mod.rs  tx.rs
crates/node/src/metrics/: server.rs
crates/node/src/p2p/: gossip.rs  manager.rs  mod.rs  msg.rs  peer.rs
crates/node/src/rpc/: handlers.rs  mod.rs  server.rs
crates/node/src/staking/: governance.rs  lifecycle.rs  metadata.rs  mod.rs  rewards.rs  slashing.rs  state.rs  tx.rs
crates/node/src/storage/: block_store.rs  mod.rs  state_store.rs  wal.rs
design/: command-router.md  consensus-bft.md  core-types.md  devops-deployment.md  index.md  metrics-observability.md  node-config.md  p2p-networking.md  rpc-server.md  smart-contracts.md  state-machine.md  storage.md
design/diagrams/: README.md  c4-container.md  c4-context.md  consensus-sequence.md  consensus-state-machine.md  core-types.md  data-flow.md
design/relationship/: domain.md  overview.md
devops/: Dockerfile  docker-compose.yml  prometheus.yml
devops/config/: genesis.json
devops/config/node0/: node.toml
devops/config/node1/: node.toml
devops/config/node2/: node.toml
devops/config/node3/: node.toml
devops/grafana/provisioning/dashboards/: dashboard.yml
devops/grafana/provisioning/datasources/: prometheus.yml
devops/scripts/: init-cluster.sh  simulate-failure.sh  submit-tx.sh
docs/: README.md  failure-models.md  requirements.md  roadmap.md
docs-gen/: api-reference.md  architecture.md  operator-guide.md
docs/architecture/: block-sync.md  consensus.md  contracts.md  event-loop-and-threading.md  networking.md  overview.md  rpc.md  state-machine.md  state-transition-table.md  storage.md  validator-sets.md
docs/devops/: docker.md  operations.md
docs/observability/: observability.md
docs/runbooks/: debugging-consensus.md
docs/testing/: testing-strategy.md
domain/domain/event-flows/: consensus-events.md
domain/domain/sequences/: block-commit-sequence.md  p2p-handshake-sequence.md
domain/domain/state-machines/: consensus-step.md  peer-connection.md
mydocs/: bft-core-model.md  c4-architecture.md  node-crate-architecture.md  pow-vs-pos.md
plans/: plan-block-sync.md  plan-cli-tool.md  plan-consensus-core.md  plan-debugging-tools.md  plan-docker-devops.md  plan-event-loop-threading.md  plan-failure-models.md  plan-foundation-and-types.md  plan-mempool.md  plan-node-binary.md  plan-observability.md  plan-operations.md  plan-p2p-networking.md  plan-rpc-api.md  plan-smart-contracts.md  plan-state-machine.md  plan-storage.md  plan-testing.md  plan-validator-sets.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/consensus/: events.rs  mod.rs  proposer.rs  router.rs  state.rs  timer.rs  vote_set.rs
src/contracts/: host_api.rs  mod.rs  runtime.rs  validation.rs
src/crypto/: ed25519.rs  hash.rs
src/metrics/: mod.rs  registry.rs
src/p2p/: codec.rs  config.rs  gossip.rs  manager.rs  mod.rs  msg.rs  peer.rs
src/router/: mod.rs
src/rpc/: handlers.rs  server.rs  types.rs
src/state/: accounts.rs  executor.rs  merkle.rs  mod.rs  tx.rs
src/storage/: block_store.rs  mod.rs  state_store.rs  wal.rs
src/types/: address.rs  block.rs  hash.rs  mod.rs  proposal.rs  serialization.rs  transaction.rs  validator.rs  vote.rs
tasks/: todo.md
tests/: consensus_core_tests.rs  integration_tests.rs  proposer_tests.rs  validator_set_tests.rs  vote_set_tests.rs  wal_tests.rs
