[package]
name = "RustBFT"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "1"
serde_bytes = "0.11"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
bytes = "1"
lru = "0.12"

x25519-dalek = "2"
chacha20poly1305 = "0.10"
zeroize = "1"
anyhow = "1.0.101"
serde_json = "1"

wasmtime = { version = "17", default-features = false, features = ["cranelift"] }
wasmparser = "0.120"

rocksdb = "0.22"

axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1"
