[workspace]
members = [
    "crates/core",
    "crates/consensus",
    "crates/node",
    "crates/node-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Core / crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = "2"
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
toml = "0.8"
bytes = "1"

# Async / concurrency
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }
crossbeam-channel = "0.5"

# Smart contracts
wasmtime = { version = "17", default-features = false, features = ["cranelift"] }
wasmparser = "0.120"

# Storage
redb = "2"

# RPC / HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1"

# Metrics
prometheus-client = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utils
lru = "0.12"
thiserror = "1"
anyhow = "1.0.101"

